# gustgrid-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: simulator.h  vulkan_utils.h
src/: main.cpp  simulator.cpp
src/shaders/: tempreader.glsl
src/shaders/compiled/: clearbuffers.comp.spv  clearpressure.comp.spv  clearpressureout.comp.spv  computeadvection.comp.spv  computedivergence.comp.spv  computeresidual.comp.spv  convectiveheat.comp.spv  copyvelocitytemp.comp.spv  diffusekernel.comp.spv  enforceboundaryconditions.comp.spv  fanaccessupdate.comp.spv  main.frag.spv  main.vert.spv  normalizeforward.comp.spv  pressurejacobi.comp.spv  resetfanaccess.comp.spv  subtractpressuregradient.comp.spv  testtriangle.frag.spv  testtriangle.vert.spv  text.frag.spv  ui.frag.spv  ui.vert.spv  velocityupdate.comp.spv  volume.frag.spv  volume.vert.spv
src/shaders/glsl/: clearbuffers.comp  clearpressure.comp  clearpressureout.comp  computeadvection.comp  computeadvection_cas.comp  computedivergence.comp  computeresidual.comp  convectiveheat.comp  copyvelocitytemp.comp  diffusekernel.comp  enforceboundaryconditions.comp  fanaccessupdate.comp  main.frag  normalizeforward.comp  pressurejacobi.comp  pressurejacobi_swap.comp  reduce_residual_sum.comp  reduce_residual_sum2.comp  resetfanaccess.comp  subtractpressuregradient.comp  tempreader.comp  testtriangle.frag  testtriangle.vert  text.frag  velocityupdate.comp  volume.frag  volume.vert
